WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
178615
[Mac] Web Automation: key modifiers for synthesized NSEvents are incorrect
https://bugs.webkit.org/show_bug.cgi?id=178615
Summary
[Mac] Web Automation: key modifiers for synthesized NSEvents are incorrect
Blaze Burg
Reported
2017-10-20 21:44:41 PDT
Make this code more like iOS and GTK.
Attachments
Patch
(9.83 KB, patch)
2017-10-20 21:52 PDT
,
Blaze Burg
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Blaze Burg
Comment 1
2017-10-20 21:52:26 PDT
Created
attachment 324487
[details]
Patch
Joseph Pecoraro
Comment 2
2017-10-23 17:14:15 PDT
Comment on
attachment 324487
[details]
Patch r=me
WebKit Commit Bot
Comment 3
2017-10-23 18:17:03 PDT
Comment on
attachment 324487
[details]
Patch Clearing flags on attachment: 324487 Committed
r223869
: <
https://trac.webkit.org/changeset/223869
>
WebKit Commit Bot
Comment 4
2017-10-23 18:17:04 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug